fix lab 3